--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
             <h2>Prizes</h2>
                 <ul>
                     <li><strong>First Prize:</strong> Full funding for the construction of the bridge at the proposed location, 
-                    along with international recognition.</li>
-                    <li><strong>Second Prize:</strong> Partial funding and a special recognition.</li>
+                    along with international recognition.*</li>
+                    <li><strong>Second Prize:</strong> Partial funding and a special recognition.*</li>
                     <li><strong>Third Prize:</strong> Special recognition and a certificate of participation.</li>
                 </ul>
+                    * This is just for a educational proposal. The organization has the right to decline any external registration.
+
         </section>
     </div>    
 
